--- a/src/sass/sections/em-blog.scss
+++ b/src/sass/sections/em-blog.scss
@@ -6,10 +6,6 @@
 
 // Default EXTRA-SMALL viewport using Bootstrap breakpoints
 
-div#em-containerBlog {
-    margin-bottom: 10rem;
-}
-
 div#em-wrapperBlog {
 
     div#em-blogHeadingWrapper {
